--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
         </div>
     </div>
 
-    <div class="filters">
-        <label for="category-select">Filter by category:</label>
-        <select id="category-select">
-            <option value="all">All categories</option>
-        </select>
-    </div>
+  
+        <div id="category-checkboxes" class="filters"></div>
 
     <div id="pizza-container">
         <svg id="pizza-viz" width="900" height="900"></svg>
