--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         </div>
     </div>
 
-  
-        <div id="category-checkboxes" class="filters"></div>
 
+    <div class="dropdown">
+        <button id="dropdown-btn">Choose Category ▾</button>
+        <div id="category-checkboxes" class="dropdown-content"></div>
+      </div>
+      
     <div id="pizza-container">
         <svg id="pizza-viz" width="900" height="900"></svg>
     </div>
