--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
     </div>
 
 
-    <div class="dropdown">
-        <button id="dropdown-btn">Choose Category ▾</button>
-        <div id="category-checkboxes" class="dropdown-content"></div>
-      </div>
+    <div class="filters">
+        <div class="dropdown">
+            <button id="category-btn">Choose Category ▾</button>
+            <div id="category-checkboxes" class="dropdown-content"></div>
+        </div>
+       
+    </div>
       
     <div id="pizza-container">
         <svg id="pizza-viz" width="900" height="900"></svg>
