filter pizza name

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 
     <div class="filters">
         <div class="dropdown">
-            <button id="category-btn">Choose Category ▾</button>
+            <button id="category-btn">Filter by category ▾</button>
             <div id="category-checkboxes" class="dropdown-content"></div>
         </div>
-       
+
+        <div class="dropdown">
+            <button id="pizza-btn">Filter by pizza ▾</button>
+            <div id="pizza-checkboxes" class="dropdown-content"></div>
+          </div>
     </div>
       
     <div id="pizza-container">
