--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <br><br>In the next visualization, you’ll find out which pizzas are true bestsellers.
 
         </div>
+
+        <div class="thirdscreen"></div>
+        <div class="fourthscreen"></div>
+        <div class="fifthscreen"></div>
+
+        
     </div>
 
     <div class="filters">
@@ -54,6 +60,10 @@
     <div id="tooltip"></div>
 
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/secondscreen.js"></script>
+    <script type="module" src="/src/thirdscreen.js"></script>
+    <script type="module" src="/src/fourthscreen.js"></script>
+    <script type="module" src="/src/fifthscreen.js"></script>
 </body>
 
 </html>
