--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         <div class="secondscreensbuttonsection">
             <div id="pizza-buttons"></div>
             <div class="button-container">
-                <button id="complete-selection" class="bn54">
-                    <span class="bn54span">Curious? Press the button to find out!</span>
+                <button id="complete-selection" class="button-56">
+                    Curious? Press the button here to find out!
                 </button>
             </div>
-
-            <div id="selection-message"></div>
+            <div class="resultsection">
+                <div id="selection-message" ></div>
+            </div>
         </div>
 
 
