--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pizza sales visualization</title>
     <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/thirdstyle.css" />
 </head>
 
 <body>
@@ -38,16 +39,11 @@
             </div>
         </div>
 
-
-
-
-
         <div class="thirdscreen"></div>
+
+
         <div class="fourthscreen"></div>
         <div class="fifthscreen"></div>
-
-
-
     </div>
 
     <script type="module" src="/src/main.js"></script>
