style for screen4

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pizza sales visualization</title>
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/thirdstyle.css" />
+      <link rel="stylesheet" href="/src/fourthscreen.css" />
 </head>
 
 <body>
