--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <p> Not it's your turn. Dive in and explore the whole</p>
             <h2>PIZZA</h2>
             <h3>universe!</h3>
+            <p style="font-size: 1rem">Click on the pizza bubbles</p>
         </div>
 
         <div class="fifthscreen-content">
