--- a/index.html
+++ b/index.html
@@ -61,7 +61,24 @@
             <p style="font-size: 1rem">Click on the pizza bubbles</p>
         </div>
 
+
+
         <div class="fifthscreen-content">
+            <div id="tooltip" style="
+  position: absolute;
+  opacity: 0;
+  background: white;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  pointer-events: none;
+  font-family: aptly, sans-serif;
+  font-size: 14px;
+  color: #000;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.2s ease;
+"></div>
+
             <div class="bubble-section">
                 <div id="packed-circle-chart"></div>
                 <p id="bubble-hint" class="bubble-hint">Click pizza bubbles to compare.</p>
@@ -70,10 +87,10 @@
                 <div id="bar-chart"></div>
                 <div id="timeline-chart"></div>
             </div>
-            
+
         </div>
 
-    
+
 
 
 
