--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="fourthscreen"></div>
 
-        <div class="fifthstartscreen">
+        <div class="fifthstartscreen" style="margin-top: 40vh">
             <h3>Think you've seen it all?</h3>
             <p> Not it's your turn. Dive in and explore the whole</p>
             <h2>PIZZA</h2>
@@ -65,19 +65,19 @@
 
         <div class="fifthscreen-content">
             <div id="tooltip" style="
-  position: absolute;
-  opacity: 0;
-  background: white;
-  padding: 6px 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  pointer-events: none;
-  font-family: aptly, sans-serif;
-  font-size: 14px;
-  color: #000;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-  transition: opacity 0.2s ease;
-"></div>
+            position: absolute;
+            opacity: 0;
+            background: white;
+            padding: 6px 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            pointer-events: none;
+            font-family: aptly, sans-serif;
+            font-size: 14px;
+            color: #000;
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+            transition: opacity 0.2s ease;
+            "></div>
 
             <div class="bubble-section">
                 <div id="packed-circle-chart"></div>
